--- a/public-directory/sass/components/_button.scss
+++ b/public-directory/sass/components/_button.scss
@@ -82,3 +82,8 @@
             color: $text-color-white;
         }
     }
+//Error page button
+.btn-error{
+    color: $text-color-white;
+    border: 2px solid white;
+}
