--- a/template/views/errorPage.hbs
+++ b/template/views/errorPage.hbs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <title>Error</title>
 </head>
-<body id="body-reset">
+<body>
     <section class="section-error">
         <div class="section-error__message">
             <h2 class="error-heading">404</h2>
@@ -19,5 +19,6 @@
             <a href="/" class="btn btn-error">home page</a>
         </div>
     </section>
+    {{>footer}}
 </body>
 </html>
