--- a/public-directory/css/style.css
+++ b/public-directory/css/style.css
@@ -1,3 +1,9 @@
+/*
+phone : 0-600px,          600px/16px = 37.25em 
+tab-port : 600px-900px    900px/16px = 56.25
+tab-land : 900px-1200px   1200px/16px = 75%
+big-screens : 1200px+                   75%+
+*/
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
 .noSelect {
   -webkit-tap-highlight-color: transparent;
@@ -16,7 +22,19 @@
   box-sizing: inherit; }
 
 html {
-  font-size: 62.6%; }
+  font-size: 62.5%; }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
+  @media (max-width: 75em) {
+    html {
+      font-size: 58%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (max-width: 37.5em) {
+    html {
+      font-size: 43.75%; } }
 
 body {
   box-sizing: border-box; }
@@ -57,6 +75,12 @@ body {
     opacity: 1;
     visibility: visible; } }
 
+@keyframes textSlider {
+  0% {
+    transform: translateX(140rem); }
+  100% {
+    transform: translateX(-100%); } }
+
 body {
   font-family: "Lato",sans-serif;
   font-size: 1.6rem;
@@ -64,7 +88,16 @@ body {
   box-sizing: border-box;
   color: #777;
   padding: 1rem;
+  padding-top: 0;
   line-height: 1.7; }
+  @media (max-width: 56.25em) {
+    body {
+      margin: 0;
+      padding: 0; } }
+  @media (max-width: 75rem) {
+    body {
+      padding: 0;
+      margin: 0; } }
 
 /* heading primary */
 .header__text-box {
@@ -72,6 +105,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 60%;
   /* for BUTTON */
   text-align: center; }
 
@@ -85,12 +119,19 @@ body {
   .heading-primary--main {
     display: block;
     font-size: 6rem;
-    font-weight: 400;
+    font-weight: 700;
     letter-spacing: 3.5rem;
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
     /* animation-iteration-count: number of times animation will run */ }
+    @media (max-width: 81.25em) {
+      .heading-primary--main {
+        font-size: 5rem;
+        letter-spacing: 2.5rem; } }
+    @media (max-width: 75em) {
+      .heading-primary--main {
+        font-size: 5.5rem; } }
   .heading-primary--sub {
     display: block;
     font-size: 2rem;
@@ -98,17 +139,24 @@ body {
     letter-spacing: 0.85rem;
     animation-name: moveInRight;
     animation-duration: 1s;
-    animation-timing-function: ease-out; }
+    animation-timing-function: ease-out;
+    font-size: 2rem; }
+    @media (max-width: 81.25em) {
+      .heading-primary--sub {
+        letter-spacing: 0.5rem; } }
 
 /* Navigation Settings */
 .header__navigation {
   position: absolute;
-  top: 5.5rem;
-  left: 49rem; }
+  top: 11%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 40%; }
 
 .nav-bar {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   border-top: white .2rem solid;
   border-bottom: #fff 0.2rem solid; }
   .nav-bar--links:link, .nav-bar--links:visited {
@@ -152,11 +200,11 @@ body {
     margin-bottom: 3rem; }
 
 .error-heading {
-  font-size: 20rem;
+  font-size: 10rem;
   color: #fff;
   font-weight: bolder;
   letter-spacing: 1rem;
-  margin-bottom: -5rem; }
+  margin-bottom: 0rem; }
 
 .paragraph--error {
   text-transform: capitalize;
@@ -171,7 +219,8 @@ body {
 
 #body-reset {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  background-color: #f7f7f7; }
 
 /* BUTTON */
 .btn {
@@ -222,11 +271,24 @@ body {
   border-bottom: 1px solid #00c3ff;
   text-transform: capitalize;
   transition: all .3s ease-in-out;
-  font-weight: 700; }
+  font-weight: 700;
+  box-shadow: 0.5rem 0.5rem 1rem rgba(0, 0, 0, 0.3); }
 
 .btn-s:hover {
   background-color: #00c3ff;
-  color: #fff; }
+  color: #fff;
+  transform: translateY(-3px);
+  box-shadow: 0.5rem 1rem 1.5rem rgba(0, 0, 0, 0.4); }
+
+.btn-s:active {
+  transform: translateY(-1px);
+  box-shadow: 0.5rem 0.3rem 0.8rem rgba(0, 0, 0, 0.5); }
+
+.btn--stories {
+  border: 1px solid orange !important;
+  color: #fff !important; }
+  .btn--stories:hover {
+    background-color: orange; }
 
 .btn-error {
   color: #fff;
@@ -234,6 +296,9 @@ body {
 
 .album {
   position: relative; }
+  @media (max-width: 64.125em) {
+    .album {
+      top: 6rem; } }
   .album img {
     width: 45%;
     box-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.5);
@@ -254,6 +319,9 @@ body {
   .album__3 {
     top: 37%;
     left: 28%; }
+    @media (max-width: 71.625em) {
+      .album__3 {
+        top: 20%; } }
   .album:hover .album-img:not(:hover) {
     transform: scale(0.8); }
 
@@ -303,7 +371,11 @@ body {
       transform: translateZ(2.5rem);
       transform: rotateY(0); }
     .d3-card__side--back {
-      transform: rotateY(180deg); }
+      transform: rotateY(180deg);
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center; }
       .d3-card__side--back--1 {
         background-image: linear-gradient(to right, rgba(3, 0, 30, 0.6), rgba(115, 3, 192, 0.6), rgba(236, 56, 188, 0.6)); }
       .d3-card__side--back--2 {
@@ -314,12 +386,155 @@ body {
     transform: rotateY(-180deg); }
   .d3-card:hover .d3-card__side--back {
     transform: rotateY(0deg); }
+  .d3-card__photo {
+    height: 17.8rem;
+    background-size: cover;
+    background-blend-mode: screen;
+    background-position: center;
+    background-repeat: no-repeat; }
+    .d3-card__photo--1 {
+      background-image: linear-gradient(to right, rgba(3, 0, 30, 0.6), rgba(115, 3, 192, 0.6), rgba(236, 56, 188, 0.6)), url("../img/HTML.jpg"); }
+    .d3-card__photo--2 {
+      background-image: linear-gradient(to right, rgba(102, 125, 182, 0.6), rgba(253, 187, 45, 0.6)), url("../img/React.png"); }
+    .d3-card__photo--3 {
+      background-blend-mode: darken;
+      background-image: linear-gradient(to right, rgba(178, 31, 31, 0.6), rgba(253, 187, 45, 0.6)), url("../img/Express.jpg"); }
+  .d3-card__heading {
+    font-size: 2.3rem;
+    font-weight: bolder;
+    color: #fff;
+    text-transform: uppercase;
+    width: 60%;
+    text-align: right;
+    position: absolute;
+    top: 14rem;
+    right: 2rem; }
+    @media (max-width: 75em) {
+      .d3-card__heading {
+        top: 12rem; } }
+    .d3-card__heading-span--1 {
+      padding: 1.2rem;
+      background-image: linear-gradient(to right, rgba(3, 0, 30, 0.8), rgba(115, 3, 192, 0.8), rgba(236, 56, 188, 0.8)); }
+    .d3-card__heading-span--2 {
+      padding: 1.2rem;
+      background-image: linear-gradient(to right, rgba(102, 125, 182, 0.8), rgba(253, 187, 45, 0.8)); }
+    .d3-card__heading-span--3 {
+      padding: 1rem;
+      background-image: linear-gradient(to right, rgba(178, 31, 31, 0.8), rgba(253, 187, 45, 0.8)); }
+  .d3-card__content {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+    .d3-card__content__text {
+      margin-top: 6rem;
+      width: 70%;
+      height: 70%; }
+      @media (max-width: 75em) {
+        .d3-card__content__text {
+          margin-top: 3rem; } }
+
+.para {
+  margin: 0rem; }
+  .para--white {
+    color: #fff; }
+
+.back-heading {
+  color: #fff;
+  font-size: 4rem; }
+
+.story {
+  width: 60%;
+  padding: 6rem;
+  padding-left: 9rem;
+  color: #777;
+  margin: 0 auto;
+  margin-bottom: 10rem;
+  background-color: rgba(255, 255, 255, 0.6);
+  box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.4);
+  transform: skewX(-12deg); }
+  .story__shape {
+    float: left;
+    width: 15rem;
+    height: 15rem;
+    position: relative;
+    background-position: center;
+    background-size: cover;
+    transform: translateX(-3rem) skewX(12deg);
+    -webkit-shape-outside: circle(50% at 50% 50%);
+    -webkit-clip-path: circle(50% at 50% 50%); }
+    .story__shape__img {
+      height: 120%;
+      transition: all .4s ease-in-out;
+      transform: translateX(-1rem) scale(1.1); }
+  .story__text {
+    transform: skewX(12deg); }
+  .story__caption {
+    color: #f7f7f7;
+    font-size: 1.7rem;
+    font-weight: 700;
+    text-transform: capitalize;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+    transition: all .4s ease-in-out; }
+  .story:hover .story__caption {
+    top: 50%;
+    opacity: 1; }
+  .story:hover .story__shape__img {
+    filter: blur(3px) brightness(80%);
+    backface-visibility: hidden;
+    transform: translateX(-1.5rem) scale(1); }
+
+.video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  opacity: .6;
+  background-position: center;
+  overflow: hidden; }
+
+.anouncement {
+  border-top: 1px solid grey;
+  border-bottom: 1px solid grey;
+  margin: .5rem 0rem;
+  overflow: hidden;
+  position: relative; }
+  .anouncement__heading {
+    display: inline-block;
+    font-size: 2.5rem;
+    font-family: serif;
+    margin-left: 2rem;
+    font-weight: bolder;
+    text-transform: capitalize;
+    display: inline-block;
+    text-shadow: 0.5rem 1rem 2rem rgab(black, 0.4);
+    margin: 0.5rem 0;
+    animation: textSlider 20s linear infinite; }
+    @media (max-width: 58em) {
+      .anouncement__heading {
+        font-size: 2rem; } }
+  .anouncement__arrow {
+    position: absolute;
+    top: 0;
+    right: 0;
+    float: right;
+    border: 2.5rem solid transparent;
+    border-right: 2.5rem solid black; }
+    @media (max-width: 58em) {
+      .anouncement__arrow {
+        border: 2rem solid transparent;
+        border-right: 2rem solid black; } }
 
 .project-section {
-  padding-top: 18rem;
+  padding-top: 28rem;
   padding-bottom: 25rem;
   background-color: #f7f7f7;
-  margin-top: -15.5rem;
+  margin-top: -29.5rem;
   width: 100%; }
   .project-section__data {
     display: flex;
@@ -347,16 +562,26 @@ body {
   padding: 3rem 0rem 2rem 0rem;
   background-color: #333; }
 
+.story-section {
+  position: relative;
+  padding-bottom: 10rem; }
+
 .section-error {
-  height: 100vh;
+  height: 60vh;
   background-color: #333;
   text-align: center;
+  padding: 2rem;
+  padding-bottom: 10rem;
   display: flex;
   align-items: center;
   justify-content: center; }
   .section-error__message {
-    width: 40%;
+    width: 20%;
+    height: 50%;
     margin-top: -20rem; }
+    @media (max-width: 37.5em) {
+      .section-error__message {
+        width: 40%; } }
 
 .header {
   position: relative;
@@ -364,7 +589,7 @@ body {
   background-image: linear-gradient(to right, rgba(0, 195, 255, 0.8), rgba(255, 255, 28, 0.6)), url(../img/apex-header-cover.jpg);
   background-size: cover;
   background-position: right;
-  clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 85%, 0% 100%);
   /* Logo Settings */ }
   .header__logo-box {
     position: absolute;
