--- a/public-directory/sass/main.scss
+++ b/public-directory/sass/main.scss
@@ -14,6 +14,8 @@
 @import "components/flex-container";
 @import "components/card";
 @import "components/d3-card";
+@import "components/story";
+@import "components/anouncement";
 
 
 @import "pages/home";
