--- a/public-directory/sass/pages/_home.scss
+++ b/public-directory/sass/pages/_home.scss
@@ -1,8 +1,8 @@
 .project-section{
-    padding-top: 18rem; //temporary
+    padding-top: 28rem; //temporary
     padding-bottom: 25rem;
     background-color: $color-grey-light;
-    margin-top: -15.5rem;
+    margin-top: -29.5rem;
     width: 100%;
 
     &__data{
@@ -41,5 +41,10 @@
 .footer{
     padding: 3rem 0rem 2rem 0rem;
     background-color: $color-grey-dark;
+}
+
+.story-section{
+    position: relative;
+    padding-bottom: 10rem;
 }
 
