--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -12,129 +12,18 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="noSelect">
-<header>
-    <div class="header">
-        <div class= header__logo-box>
-            <!-- <img src="./img/apex-logo.png" alt="Apex group logo image" class="header__logo"> -->
-        </div>
-        <div class="header__navigation">
-            <div class="nav-bar">
-                <a href="/" class="nav-bar--links">Home</a>
-                <a href="/Services" class="nav-bar--links">Services</a>
-                <a href="/Projects" class="nav-bar--links">Projects</a>
-                <a href="https://www.linkedin.com/search/results/all/?keywords=mian%20bilal%20sadiq&origin=RICH_QUERY_SUGGESTION&position=0&searchId=2233499c-6a9d-435f-a146-c0f0f017f295&sid=F)o" class="nav-bar--links">Contact Us</a>
-            </div>
-        </div>
-        <div class="header__text-box">
-            <h1 class="heading-primary">
-                <span class="heading-primary--main">Apex Devs</span>
-                <span class="heading-primary--sub">Your Requirement Our Priority</span>
-            </h1>
-            <a href="#" class="btn btn--white btn--animated">discover more</a>
-        </div>
-    </div>
-</header>
-<!-- Album section -->
-<section class="project-section">
-    <div class="project-section__title">
-        <h2 class="heading-secondary">we build great apps for web</h2>
-    </div>
-    <div class="project-section__data">
-        <div class="project-section__data--content">
-            <h2 class="heading-tertiary">Experience the most aadvanced sites in SCSS</h2>
-            <p class="paragraph">Sass is the most mature, stable, and powerful professional grade CSS extension language in the world. With sass development your websie will me musch more efficient and user friendly. because user hate to wait. OOPS !</p>
-            <h2 class="heading-tertiary">let us be the reason for the responsivenes of your website</h2>
-            <p class="paragraph">Sass is the most mature, stable, and powerful professional grade CSS extension language in the world. With sass development your websie will me musch more efficient and user friendly. because user hate to wait. OOPS !</p>
-            <div><a href="#" class="btn-s">view more &rarr;</a></div>
-        </div>
-        <div class="project-section__data--album   album">
-            <img src="./img/album1.png" alt="picture of web dev" class="album-img album__1">
-            <img src="./img/album2.jpg" alt="picture of responsive design"  class="album-img album__2">
-            <img src="./img/album3.jpg" alt="picture of web-ops"  class="album-img album__3">
-        </div>
-    </div>
-</section>
-<!-- Card Section -->
-<section class="section-services">
-    <div class="flex-container">
-
-        <div class="card">
-            <i class="icon-basic-world  card--font"></i>
-            <h2 class="heading-tertiary">first Card</h2>
-            <p class="paragraph">Sass is the most mature, stable, and powerful professional grade CSS extension Sass is the most mature, stable, and powerful professional grade CSS extension</p>
-        </div>
-        <div class="card">
-            <i class="icon-basic-world  card--font"></i>
-            <h2 class="heading-tertiary">first Card</h2>
-            <p class="paragraph">Sass is the most mature, stable, and powerful professional grade CSS extensionSass is the most mature, stable, and powerful professional grade CSS extension</p>
-        </div>
-        <div class="card">
-            <i class="icon-basic-world   card--font"></i>
-            <h2 class="heading-tertiary">first Card</h2>
-            <p class="paragraph">Sass is the most mature, stable, and powerful professional grade CSS extensionSass is the most mature, stable, and powerful professional grade CSS extension</p>
-        </div>
-        <div class="card">
-            <i class="icon-basic-world  card--font"></i>
-            <h2 class="heading-tertiary">first Card</h2>
-            <p class="paragraph">Sass is the most mature, stable, and powerful professional grade CSS extension Sass is the most mature, stable, and powerful professional grade CSS extension</p>
-        </div>
-    </div>
-</section>
-<!-- 3D Card Section -->
-<section class="section-3d-card">
-    <div class="align-fix">
-        <h2 class="heading-secondary">
-            this is a temporary heading
-        </h2>
-    </div>
-    <div class="flex-container" id="flex-container-fix">
-        <div class="card-container">
-            <div class="d3-card">
-                <div class="d3-card__side d3-card__side--front"></div>
-                <div class="d3-card__side d3-card__side--back d3-card__side--back--1"></div>
-            </div>
-        </div>
-        <div class="card-container">
-            <div class="d3-card">
-                <div class="d3-card__side d3-card__side--front"></div>
-                <div class="d3-card__side d3-card__side--back d3-card__side--back--2"></div>
-            </div>
-        </div>
-        <div class="card-container">
-            <div class="d3-card">
-                <div class="d3-card__side d3-card__side--front"></div>
-                <div class="d3-card__side d3-card__side--back d3-card__side--back--3"></div>
-            </div>
-        </div>
-    </div>
-</section>
-<footer class="footer">
-    <div class="align-fix">
-        <h1 class="footer__top">Website under maintenance</h1>
-    </div>
-    <div class="flex-container" id="flex-container-fix">
-        <div class="footer__sub footer__sub--left">
-            <div class="footer__sub__footer-nav">
-                <a href="" class="footer__sub__footer-nav__links footer__sub__footer-nav__links--1">company</a>
-                <a href="" class="footer__sub__footer-nav__links footer__sub__footer-nav__links--2">careers</a>
-                <a href="" class="footer__sub__footer-nav__links footer__sub__footer-nav__links--3">privacy policy</a>
-                <a href="" class="footer__sub__footer-nav__links footer__sub__footer-nav__links--4">terms</a>
-                <a href="https://www.linkedin.com/search/results/all/?keywords=mian%20bilal%20sadiq&origin=RICH_QUERY_SUGGESTION&position=0&searchId=2233499c-6a9d-435f-a146-c0f0f017f295&sid=F)o" class="footer__sub__footer-nav__links footer__sub__footer-nav__links--4">contact us</a>
-            </div>
-        </div>
-        <div class="footer__sub footer__sub--right">
-            <div class="footer__sub__content">
-                this is a demo website to test out my front end skills 
-                and for the demonstration, how much 
-                <a href="" class="footer__sub__footer-nav__links footer__sub__footer-nav__links--4">HTML5</a>
-                <a href="" class="footer__sub__footer-nav__links footer__sub__footer-nav__links--4">CSS3</a>
-                <a href="" class="footer__sub__footer-nav__links footer__sub__footer-nav__links--4">SCSS</a>
-                can be powerful. this website is currently under maintenance and development. new feature will 
-                be added from time to time. If you want your websites to developed by us pleas make sure to contact us
-            </div>
-        </div>
-    </div>
-    <h3 class="copyright-claim">&copy;2022 Apex Group Pak, Inc. All Rights reserved.</h3>
-</footer>
+    {{>anouncement}}
+    {{!-- header Section --}}
+{{>header}}
+    <!-- Album section -->
+{{>albums}}
+        <!-- Card Section -->
+{{>simpleCards}}
+            <!-- 3D Card Section -->    
+{{>d3Cards}}
+        {{!-- story section --}}
+{{>story}}
+    {{!-- Footer Section --}}
+{{>footer}}
 </body>
 </html>
